--- a/style.css
+++ b/style.css
@@ -3,7 +3,14 @@ body {
   font-weight: 350;
   font-style: normal;
 }
+#Aakash{
+  margin-right: 10px;
 
+  
+}
+#Brinda{
+  margin-left: 10px;
+}
 
 
 
