--- a/style.css
+++ b/style.css
@@ -380,6 +380,81 @@ h1{
   border: 2px black solid;
 
 }
+.sliding-container{
+  position: relative;
+  right: 100px;
+
+}
+}
+/*changes*/
+
+.sliding-container {
+  width: 80%;
+  height: 500px;
+  overflow: hidden;
+  position: relative;
+  border: 2px solid #ccc;
+  border-radius: 10px;
+  margin-left: 160px;
+}
+
+.slide {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  font-weight: bold;
+  color: white;
+  background-color: #3498db;
+  position: absolute;
+  top: 0;
+  left: 100%;
+  animation: slide 10s infinite;
+}
+
+.slide:nth-child(1) {
+  animation-delay: 0s;
+  background-color: #3498db;
+}
+
+.slide:nth-child(2) {
+  animation-delay: 2.5s;
+  background-color: #e74c3c;
+}
+
+.slide:nth-child(3) {
+  animation-delay: 5s;
+  background-color: #2ecc71;
+}
+
+.slide:nth-child(4) {
+  animation-delay: 7.5s;
+  background-color: #9b59b6;
+}
+
+@keyframes slide {
+  0% {
+      left: 100%;
+  }
+  25% {
+      left: 0%;
+  }
+  50% {
+      left: -100%;
+  }
+  75% {
+      left: -200%;
+  }
+  100% {
+      left: -300%;
+    }
+}
+.slide img{
+  width: 100%;
+  height: 500px;
+
 }
 
   
