--- a/style.css
+++ b/style.css
@@ -1,391 +1,457 @@
-
-
-  
-
-#Aakash{
+#Aakash {
   margin-right: 10px;
 
-  
+
 }
-#Brinda{
+
+#Brinda {
   margin-left: 10px;
 }
 
 
 
-*{
+* {
   margin: 0px;
   padding: 0px;
 }
-.navbar img{ 
+
+.navbar img {
   width: 200px;
 }
-.navbar{
+
+.navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 10px;
   padding: 10px;
   border-bottom: 1px black solid;
-  
+
 }
-.navbar__s2  {
+
+.navbar__s2 {
   display: flex;
-  
-  
+
+
 }
-.navbar__s2 p{
+
+.navbar__s2 p {
   margin: 8px;
   border: 1px solid black;
   padding: 8px;
   border-radius: 50px;
   cursor: pointer;
 }
-  
-.navbar__s3{
+
+.navbar__s3 {
   display: flex;
-  align-items: center; 
-  
+  align-items: center;
+
 }
-.navbar__s3 i{
+
+.navbar__s3 i {
   margin-right: 2px;
 }
-.navbar__s3 p{
+
+.navbar__s3 p {
   margin: 5px;
 }
-.navbar__s2 p:hover{
+
+.navbar__s2 p:hover {
   background: rgb(203, 199, 199);
   border: 1px solid black;
   padding: 8px;
   border-radius: 50px;
 }
-.navbar__s3 .sign{
+
+.navbar__s3 .sign {
   background-color: black;
   color: white;
   border-radius: 50px;
   padding: 8px;
   cursor: pointer;
 }
-.section2__s1{
-  display:flex;
-  
-  justify-content: center;
-}
-.section2__s2{
+
+.section2__s1 {
   display: flex;
-  
-  
+
+  justify-content: center;
+}
+
+.section2__s2 {
+  display: flex;
+
+
   justify-content: center;
   margin: 8px;
 }
-.section2__s2 p{
+
+.section2__s2 p {
   margin: 8px;
-  border-bottom: 2px  white solid;
-  
-  
+  border-bottom: 2px white solid;
+
+
 }
-.section2__s3{
+
+.section2__s3 {
   border: 1px solid black;
   display: flex;
   align-items: center;
   border-radius: 50px;
-  
+
   width: 50%;
   position: relative;
   left: 25%;
-  
+
 }
-.section2__s3 input{
+
+.section2__s3 input {
   outline: none;
   border: none;
-  
-  
+
+
 }
-.section2__s3 i{
+
+.section2__s3 i {
   margin: 8px;
 }
-.section2__s3 p{
+
+.section2__s3 p {
   background-color: #84E9BD;
   padding: 10px;
   margin: 8px;
   border-radius: 50px;
   cursor: pointer;
 }
-.section2__s3 p:hover{
+
+.section2__s3 p:hover {
   background-color: rgb(174, 170, 170);
 }
-.section2__s3 p{
+
+.section2__s3 p {
   position: relative;
   left: 40%;
 }
+
 .section2__s2 p:hover {
   border-bottom: 2px #84E9BD solid;
 }
-.section2__s1{
+
+.section2__s1 {
   font-size: larger;
 }
-.section3{
-  margin:10px;
+
+.section3 {
+  margin: 10px;
   display: flex;
   justify-content: center;
 
 }
-.section3 video{
+
+.section3 video {
   width: 1000px;
-  
-  
+
+
 }
-.section4{
+
+.section4 {
   margin: 20px;
   position: relative;
   left: 20px;
-  
+
 }
-.section4__s1{
+
+.section4__s1 {
   margin: 10px;
-  
+
 }
-.section4 img{
+
+.section4 img {
   width: 250px;
   height: 200px;
   border: 2px black solid;
   margin: 10px;
-  
+
 }
-.section4__s2{
+
+.section4__s2 {
   display: flex;
   flex-wrap: wrap;
-  
-  
-  
+
+
+
 }
- .hover:hover{
+
+.hover:hover {
   transform: scaley(1.2);
   transition-duration: 1s;
   margin-top: 10px;
   margin-bottom: 20px;
 }
-h1{
-  color:green;
-  
-  
+
+h1 {
+  color: green;
+
+
 }
-.section5 img{
+
+.section5 img {
   width: 250px;
   height: 200px;
   border: 2px black solid;
   margin: 10px;
-  
+
 
 }
 
-.section5{
+.section5 {
   margin: 20px;
   position: relative;
   left: 20px;
-  
-  
-  
+
+
+
 }
-.section5__s1{
+
+.section5__s1 {
   margin: 10px;
 }
-.section5__s2{
+
+.section5__s2 {
   display: flex;
   flex-wrap: wrap;
 }
-.section6{
+
+.section6 {
   background-color: #F2F2F2;
   width: 98%;
   height: 200px;
   border-radius: 50px;
   margin: 15px;
   display: flex;
-  
-  
-  
+
+
+
 }
-.section6 img{
+
+.section6 img {
   width: 200px;
   height: 150px;
   margin: 20px;
 
 }
-.section6 h1{
+
+.section6 h1 {
   position: relative;
   top: 50%;
   color: black;
 }
-.section6__s1 p{
+
+.section6__s1 p {
   color: black;
   background-color: white;
   border-radius: 50px;
   padding: 10px;
 
 }
-.section6__s1{
+
+.section6__s1 {
   position: relative;
   left: 100px;
   top: 48%;
   cursor: pointer;
 }
-.section7{
-  background-color:gray;
+
+.section7 {
+  background-color: gray;
   width: 98%;
   height: 300px;
   margin: 20px;
   display: flex;
-  
+
 }
-.section7__s1 p{
+
+.section7__s1 p {
   color: white;
   margin: 8px;
   cursor: pointer;
 }
-.section7__s1{
-  margin:10px;
+
+.section7__s1 {
+  margin: 10px;
   padding: 10px;
 }
-.section7__s2 p{
+
+.section7__s2 p {
   color: white;
   margin: 8px;
   cursor: pointer;
 }
-.section7__s2{
-  margin:10px;
+
+.section7__s2 {
+  margin: 10px;
   padding: 20px;
 }
-.section7__s3 p{
+
+.section7__s3 p {
   color: white;
   margin: 8px;
   cursor: pointer;
 }
-.section7__s3{
-  margin:10px;
+
+.section7__s3 {
+  margin: 10px;
   padding: 20px;
-  
+
 }
-.section7__s4 img{
+
+.section7__s4 img {
   width: 300px;
   height: 100px;
   position: relative;
   top: 35%;
   left: 30%;
 }
-.section7__s5 i{
+
+.section7__s5 i {
   margin: 8px;
   position: relative;
-  top:88%;
+  top: 88%;
   left: 0%;
   width: 20px;
   cursor: pointer;
 
 }
-.section7 p{
+
+.section7 p {
   border-bottom: 1px #808080 solid;
 }
+
 .section7 p:hover {
   border-bottom: 1px black solid;
 }
 
 /*media queries*/
 @media screen and (max-width:600px) {
-  .navbar{
+  .navbar {
     display: flex;
-    
+
   }
+
   .section3 video {
     width: 100%;
 
   }
+
   .section6 h1 {
-    display:none;
-  
+    display: none;
+
   }
-  .section7{
-    display:flex;
+
+  .section7 {
+    display: flex;
     flex-direction: column;
     height: 100%;
     margin: 10px;
     position: relative;
     right: 5px;
   }
+
   .section7__s5 {
     position: relative;
     text-align: center;
 
   }
+
   .section7__s4 {
     position: relative;
     right: 80px;
   }
-  .section2__s3 p{
+
+  .section2__s3 p {
     display: none;
   }
-   .hover:hover{
+
+  .hover:hover {
     transition-duration: 1s;
     margin-left: 50%;
     margin-top: 10%;
     margin-bottom: 10%;
-    
+
   }
-  .section6__s1{
+
+  .section6__s1 {
     width: fit-content;
   }
+
   .navbar {
     position: sticky;
     top: 0px;
     background-color: grey;
     z-index: 3;
     height: 50px;
-  
 
-    
+
+
   }
-  .navbar__s2 p{
+
+  .navbar__s2 p {
     display: none;
   }
+
   .section4__s2 {
     background-color: rgb(224, 221, 221);
 
-  
-}
-.section6 {
-  margin:10px;
- 
-  
 
-}
-.navbar{
-  margin: 0px;
-  
-    
-}
-.section5{
-  margin: 5px;
-  position: relative;
-  left: 5px;
-  background-color: #F2F2F2;
-}
-.section4{
-  margin: 5px;
-  position: relative;
-  left: 5px;
+  }
 
-}
-.section5 h1{
-  color: black;
-}
-.section5__s2 img, .section4__s2 img{
-  border: 2px black solid;
+  .section6 {
+    margin: 10px;
 
-}
-.sliding-container{
-  position: relative;
-  right: 100px;
 
+
+  }
+
+  .navbar {
+    margin: 0px;
+
+
+  }
+
+  .section5 {
+    margin: 5px;
+    position: relative;
+    left: 5px;
+    background-color: #F2F2F2;
+  }
+
+  .section4 {
+    margin: 5px;
+    position: relative;
+    left: 5px;
+
+  }
+
+  .section5 h1 {
+    color: black;
+  }
+
+  .section5__s2 img,
+  .section4__s2 img {
+    border: 2px black solid;
+
+  }
+
+  .sliding-container {
+    position: relative;
+    right: 130px;
+
+
+
+
+  }
 }
-}
+
 /*changes*/
 
 .sliding-container {
@@ -436,27 +502,28 @@ h1{
 
 @keyframes slide {
   0% {
-      left: 100%;
+    left: 100%;
   }
+
   25% {
-      left: 0%;
+    left: 0%;
   }
+
   50% {
-      left: -100%;
+    left: -100%;
   }
+
   75% {
-      left: -200%;
+    left: -200%;
   }
+
   100% {
-      left: -300%;
-    }
+    left: -300%;
+  }
 }
-.slide img{
+
+.slide img {
   width: 100%;
   height: 500px;
 
 }
-
-  
-
-  
