--- a/style.css
+++ b/style.css
@@ -333,6 +333,8 @@ h1 {
 
 /*media queries*/
 @media screen and (max-width:600px) {
+ 
+ 
   .navbar {
     display: flex;
 
@@ -387,7 +389,7 @@ h1 {
   .navbar {
     position: sticky;
     top: 0px;
-    background-color: grey;
+    background-color:white;
     z-index: 3;
     height: 50px;
 
@@ -445,11 +447,17 @@ h1 {
   .sliding-container {
     position: relative;
     right: 130px;
+    margin-top: 5px;
+    
+    
+    
 
 
 
 
   }
+  
+
 }
 
 /*changes*/
