--- a/style.css
+++ b/style.css
@@ -400,7 +400,7 @@ h1 {
     z-index: 3;
     height: 50px;
     display: flex;
-    width: 420px;
+    width: 100%;
     
 
 
@@ -423,6 +423,7 @@ h1 {
 
   .section6 {
     margin: 5px;
+    width: 100%;
   
   
     
@@ -438,7 +439,7 @@ h1 {
     position: relative;
     left: 1px;
     background-color: #F2F2F2;
-    width: 420px;
+    width: 100%;
 
   
     
@@ -448,7 +449,7 @@ h1 {
     margin: 4px;
     position: relative;
     left: 1px;
-    width: 420px;
+    width: 100%;
 
   }
 
@@ -483,6 +484,11 @@ h1 {
   }
   body {
     font-size: 8px;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
     
     
   }
